--- a/abstract.tex
+++ b/abstract.tex
@@ -33,7 +33,7 @@ Současné přístupy k detekci nežádoucího software sledováním síťového
 
 \todo{Zkontrolovat, doplnit (4-6), abecedně seřadit}
 \noindent \textit{Klíčová slova:}
-detekce malware, klasifikace síťového provozu, model adresy URL, multi-instanční učení, naučené příznaky, strojové učení
+detekce malware, klasifikace síťového provozu, model adresy URL, multi-instanční učení, učení se reprezentace, strojové učení
 
 \vfill
 
