--- a/conclusion.tex
+++ b/conclusion.tex
@@ -5,4 +5,4 @@ V této práci byl navržen model pro automatickou detekci síťového provozu p
 
 Součástí hypotézy bylo, že bude možné nalézt nejlepší nastavení parametrů modelu zhodnocením jejich vlivu na kvalitu klasifikátoru. To se ukázalo pouze jako částečně možné, neboť jako nejlepší nastavení parametrů byly shledány výchozí hodnoty. \todo{Možná velikost feature vektoru bude mít ještě vliv.}
 
-Jako možný další postup k vylepšení navrženého modelu se jeví opětovná aplikace mutli-instančního učení na tuto úlohu, jejímž výsledkem by byl klasifikátor, který určuje přítomnost nežádoucího software na úrovni klientů (narozdíl od současného modelu, klasifikujícího na úrovni síťových spojení). Dalším možným krokem je znovupoužití multi-instančního učení na takovýto model, tentokrát na úrovni síťových toků, to jest sekvencí síťových spojení mířících ke stejné destinaci. Výsledný model by byl tvořen čtyřmi vnořenými multi-instančními úlohami. Jako další možné vylepšení navrženého modelu se jeví techniky zrychlující proces učení. Mezi tyto patří například využití přenosových funkcí obsahujících šum (srov. \cite{gulcehre_noisy_2016} a \cite{czarnecki_understanding_2017}), sebe-normalizujících neuronových sítí (srov. \cite{klambauer_self-normalizing_2017}) či využití učení pomocí syntetických gradientů (srov. \cite{jaderberg_decoupled_2016})
+\todo{Další pole HTTP headeru - referrer, MIME type}Jako možný další postup k vylepšení navrženého modelu se jeví opětovná aplikace mutli-instančního učení na tuto úlohu, jejímž výsledkem by byl klasifikátor, který určuje přítomnost nežádoucího software na úrovni klientů (narozdíl od současného modelu, klasifikujícího na úrovni síťových spojení). Dalším možným krokem je znovupoužití multi-instančního učení na takovýto model, tentokrát na úrovni síťových toků, to jest sekvencí síťových spojení mířících ke stejné destinaci. Výsledný model by byl tvořen čtyřmi vnořenými multi-instančními úlohami. Jako další možné vylepšení navrženého modelu se jeví techniky zrychlující proces učení. Mezi tyto patří například využití přenosových funkcí obsahujících šum (srov. \cite{gulcehre_noisy_2016}), sebe-normalizujících neuronových sítí (srov. \cite{klambauer_self-normalizing_2017}) či využití učení pomocí syntetických gradientů (srov. \cite{jaderberg_decoupled_2016} a \cite{czarnecki_understanding_2017}) \todo{Semi-supervised learning, one-shot learning}
