--- a/preamble.tex
+++ b/preamble.tex
@@ -58,7 +58,7 @@
 \newcommand{\BPspace}{\ensuremath{\mathcal}}
 \newcommand{\BPfield}{\ensuremath{\mathbb}}
 \newcommand{\BPset}{\ensuremath{\mathbb}}
-\newcommand{\BPmat}{\ensuremath{\mathbb}}
+\newcommand{\BPmat}{\ensuremath{\mathbf}}
 
 \makeatletter
 \renewcommand{\ALG@name}{Algoritmus}
