--- a/problem.tex
+++ b/problem.tex
@@ -43,16 +43,16 @@ Je zřejmé, že na pořadí tokenů domény záleží, definují "cestu" k cíl
 
 \section{Výhody přístupu pomocí MIL}
 
-\todo{?}Pro modelování klasifikační funkce byl využit přístup pomocí tzv. \BPname{multi-instančního učení} (MIL)\footnote{resp. jeho speciální varianta, blíže popsaná v kapitole \ref{model}}, poprvé popsaného v \cite{dietterich_solving_1997}. Tento přítup, podrobněji popsaný v kapitole \ref{MIL}, vychází z předpokladu, že vstupem klasifikační funkce není jeden objekt, reprezentovaný vektorem o konstantní délce, ale sada (neznámého počtu) takovýchto objektů, které všechny dohromady tvoří jeden vzorek, dále zvaný \BPname{taška}. Dále je pak předpokládáno, že každou tašku je možno zařadit do nějaké třídy, přestože ne všechny její objekty náleží do této třídy. \todo{URL je taška} Adresu URL lze považovat za takovouto tašku za využití jejího hierarchického modelu, nastíněného v sekci \ref{URL_structure}. Proto lze přístup pomocí Multi-instančního učení aplikovat na tento problém.
+Klasifikační funkce byla odhadována pomocí tzv. \BPname{multi-instančního učení} (MIL)\footnote{resp. jeho speciální varianta, blíže popsaná v kapitole \ref{model}}, poprvé popsaného v \cite{dietterich_solving_1997}. Tento přístup, podrobněji popsaný v kapitole \ref{MIL}, vychází z předpokladu, že vzorek nelze reprezentovat vektorem o konstantní délce, ale sadou (dále zvanou \BPname{taška}) takovýchto vektorů (dále zvaných \BPname{instance}). Dále je pak předpokládáno, že každou tašku, obsahující neznámý počet instancí, je možno zařadit do nějaké třídy, přestože ne všechny její objekty náleží do této třídy. \todo{URL je taška} Adresu URL lze považovat za takovouto tašku za využití jejího hierarchického modelu, nastíněného v sekci \ref{URL_structure}. Proto lze přístup pomocí Multi-instančního učení aplikovat na tento problém.
 
-Přístup pomocí Multi-instančního učení produkuje topologicky složitější modely než je srovnatelný klasický model. Výměnou za tuto nevýhodu v podobě zvětšené složitosti implementační je zmenšená složitost výpočetní. Multi-instanční model totiž modeluje každou instanci nejprve zvlášť a teprve poté následuje model pro celý vzorek. To v případě použití neuronové sítě znamená výrazně méné propojení než u srovnatelné klasické síťě se stejnými počty neuronů ve stejných vrstvách. Důležitým rozdílem též je, že narozdíl od klasického modelu je Multi-instanční model rozdělen do dvou částí (model pro instance a model pro tašky), přičemž ten samý instanční model je použit několikrát v rámci jedné tašky.
+Přístup pomocí Multi-instančního učení produkuje topologicky složitější modely než je srovnatelný model založený na ručně navržených příznacích. Výměnou za tuto nevýhodu v podobě zvětšené složitosti implementační je zmenšená složitost výpočetní. Multi-instanční model totiž modeluje každou instanci nejprve zvlášť a teprve poté následuje model pro celý vzorek. To v případě použití neuronové sítě znamená výrazně méné propojení než u srovnatelné plně propojené síťě se stejnými počty neuronů ve stejných vrstvách. Důležitým rozdílem též je, že narozdíl od tohoto modelu je multi-instanční model rozdělen do dvou částí (model pro instance a model pro tašky), přičemž ten samý instanční model je použit několikrát v rámci jedné tašky.
 
 Multi-instanční přístup nám tedy dovoluje vytvořit model, jehož topologie odpovídá hierarchické struktuře adresy URL, je výpočetně méně náročný než srovnatelný klasický model a umožňuje znovupoužití některých částí. To jsou důvody, proč byl tento přístup zvolen.
 
 \section{Trénovací a testovací data}\label{dataset}
 \todo{Zkontrolovat}
 
-K trénování a testování modelu byla použita data získaná z Cisco Cloud Web Security \todo{?}. Tato data představují záznamy HTTP provozu více jak 100 společností v šesti různých časových úsecích mezi listopadem 2013 a březnem 2015. Datový soubor je rozdělen na data určená k trénování a data určená k ověření kvality navržených klasifikátorů. Oba tyto soubory jsou dále rozděleny podle jednotlivých uživatelů \todo{To se mi nezdá...} na dvě části, z nichž jedna obsahuje pouze legitimní provoz a druhá obsahuje směs legitimního provozu a provozu pocházejícího z činnosti malware. Toto rozdělení datového souboru je shrnuto v tabulce \ref{dataset_table}.
+K trénování a testování modelu byla použita data získaná z Cisco Cloud Web Security \todo{?}. Tato data představují záznamy HTTP provozu více jak 100 společností v šesti různých časových úsecích mezi listopadem 2013 a březnem 2015. Datový soubor je rozdělen na data určená k trénování a data určená k ověření kvality navržených klasifikátorů. Oba tyto soubory jsou dále rozděleny na dvě části, z nichž jedna obsahuje pouze legitimní provoz a druhá obsahuje směs legitimního provozu a provozu pocházejícího z činnosti malware. Toto rozdělení datového souboru je shrnuto v tabulce \ref{dataset_table}.
 
 \begin{table}[h]
 	\caption{Souhrn použitých souborů dat}\label{dataset_table}
