--- a/zotero.bib
+++ b/zotero.bib
@@ -574,3 +574,32 @@ An existing approach known as {MILES} is retroactively identified as an algorith
 	urldate = {2017-07-06},
 	date = {2009}
 }
+
+@unpublished{vejmelka_fighting_2017,
+	title = {Fighting malicious software with machinel learning},
+	url = {https://www.youtube.com/watch?v=ZL-j8p718G8},
+	type = {Conference talk},
+	howpublished = {Conference talk},
+	author = {Vejmelka, Martin},
+	date = {2017},
+	langid = {english},
+	note = {Machine Learning Prague}
+}
+
+@article{mac_namee_problem_2002,
+	title = {The problem of bias in training data in regression problems in medical decision support},
+	volume = {24},
+	issn = {0933-3657},
+	url = {http://www.sciencedirect.com/science/article/pii/S0933365701000926},
+	doi = {10.1016/S0933-3657(01)00092-6},
+	abstract = {This paper describes a bias problem encountered in a machine learning approach to outcome prediction in anticoagulant drug therapy. The outcome to be predicted is a measure of the clotting time for the patient; this measure is continuous and so the prediction task is a regression problem. Artificial neural networks ({ANNs}) are a powerful mechanism for learning to predict such outcomes from training data. However, experiments have shown that an {ANN} is biased towards values more commonly occurring in the training data and is thus, less likely to be correct in predicting extreme values. This issue of bias in training data in regression problems is similar to the associated problem with minority classes in classification. However, this bias issue in classification is well documented and is an on-going area of research. In this paper, we consider stratified sampling and boosting as solutions to this bias problem and evaluate them on this outcome prediction problem and on two other datasets. Both approaches produce some improvements with boosting showing the most promise.},
+	pages = {51--70},
+	number = {1},
+	journaltitle = {Artificial Intelligence in Medicine},
+	shortjournal = {Artificial Intelligence in Medicine},
+	author = {Mac Namee, B. and Cunningham, P. and Byrne, S. and Corrigan, O. I.},
+	urldate = {2017-07-07},
+	date = {2002-01-01},
+	keywords = {Anticoagulant drug therapy, Artificial neural networks, Medical decision support, Regression},
+	file = {ScienceDirect Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/U6QNTDXH/S0933365701000926.html:text/html}
+}
