--- a/results.tex
+++ b/results.tex
@@ -1,18 +1,19 @@
 \chapter{Výsledky}
 
 \section{Srovnání s nejlepším předchozím modelem}\label{prior_art_comparison}
-Obrázek \ref{prior_art} srovnává PR křivky nejlepšího modelu (srovnání parametrů v následujících podkapitolách) s nejlepším předchozím modelem pro soubor dat popsaný v kapitole \ref{dataset} (srov. \cite{machlica_learning_2017}). Nejlepší model má vstupní vektor příznaků o délce 2053, příznaky jsou generované z trigramů. Všechny tři funkce operující na úrovní částí adresy URL jsou shodně realizovány jednou vrstvou 20 neuronů s přenosovou funkcí ReLU následovanou agregací tašky funkcí aritmetického průměru. Funkce operující na úrovni celé adresy URL obsahuje jednu vrstvu 60 neuronů s lineární přenosovou funkcí, následovanou výstupní vrstvou 2 neuronů s přenosovou funkcí softmax. Síť byla učena metodou ADAM minimalizující cross-entropii, ukončenou po 25 000 krocích. Váha na pozitivní třídě byla 0.5. Minibatche obsahovaly 100 pozitivních a 100 negativních vzorků. \todo{prior art model 557 feature - rozšířená nepublikované proprietální množina. Trénovaná a neuronovými sítěmi 100 000 iterací, 1000 batch size, 128 neuronů ve 3 vrstvách, ReLU, Pak SoftMax2. ADAM, cross-entropy, Váha 0.5} Všechny křivky v této kapitole byly počítány s kvantilizací pomocí percentilů (ve smyslu kapitoly \ref{continuous_aprox}).
+Obrázek \ref{prior_art} srovnává PR křivky nejlepšího modelu (srovnání parametrů v následujících podkapitolách) s nejlepším předchozím modelem pro soubor dat popsaný v kapitole \ref{dataset} (srov. \cite{machlica_learning_2017}). Nejlepší model má vstupní vektor příznaků o délce 2053, příznaky jsou generované z trigramů. Všechny tři funkce operující na úrovní částí adresy URL jsou shodně realizovány jednou vrstvou 20 neuronů s přenosovou funkcí ReLU, následovanou agregací tašky funkcí aritmetického průměru. Funkce operující na úrovni celé adresy URL obsahuje jednu vrstvu 60 neuronů s lineární přenosovou funkcí, následovanou výstupní vrstvou 2 neuronů s přenosovou funkcí softmax. Síť byla učena metodou ADAM minimalizující cross-entropii, ukončenou po 25 000 krocích. Váha na pozitivní třídě byla 0.5. Mini-batch obsahovaly 100 pozitivních a 100 negativních vzorků. Srovnávaný předchozí model využívá rozšířenou nepublikovanou sadu 557 příznaků z \cite{machlica_learning_2017}. Model obsahoval 3 vrstvy 128 neuronů typu ReLU, následované výstupní vrstvou 2 neuronů s přenosovou funkcí softmax. Síť byla učena metodou ADAM minimalizující cross-entropii, ukončenou po 100 000 krocích. Váha na pozitivní třídě byla 0.5. Mini-batch obsahovaly 1000 pozitivních a 1000 negativních vzorků. Všechny křivky v této kapitole byly počítány s kvantilizací pomocí percentilů (ve smyslu kapitoly \ref{continuous_aprox}).
 
 \result{prior_art_PR.pdf}{prior_art}{Srovnání PR křivek s nejlepším předchozím modelem}
 
-\section{Srovnání různých topologií}
+\section{Srovnání vlivu topologie síťe}
 
 Bylo vyzkoušeno 5 různých topologií neuronových sítí, odpovídajících modelu popsanému v kapitole \ref{model}. Všechny tyto topologie používají tři identické neuronové sítě realizující funkce na úrovni částí adresy URL. Topologie označované jako \BPname{relumean}, \BPname{relurelumean}, \BPname{maxout3mean} a \BPname{maxout3maxout3mean} shodně realizují klasifikační funkci na úrovni celé adresy URL jednou vrstvou neuronů s lineární přenosovou funkcí a jednou vrstvou s přenosovou funkcí softmax. Topologie relumean používá pro funkce na úrovni částí adresy URL jednu vrstvu typu ReLU, následovanou agregační funkcí aritmetického průměru. Topologie relurelumean používá dvě vrstvy typu ReLU následované agregační funkcí aritmetického průměru. Topologie maxout3mean používá jednu vrstvu typu maxout3 (tj, maxout s parametrem \( k = 3 \)) následovanou agregační funkcí aritmetického průměru. Topologie maxout3maxout3mean využívá 2 vrstvy typu maxout3 následované agregační funkcí aritmetického průměru. Topologie \BPname{relurelumeanrelu} má funkce na úrovni částí adresy URL shodné s topologií relurelumean, avšak funkci na úrovni celé adresy URL realizuje jako jednu vrstvu typu ReLU následovanou jednou vrstvou s lineární přenosovou funkcí následovanou jednou vrstvou typu softmax. Ostatní parametry jsou shodné s parametry popsanými v kapitole \ref{prior_art_comparison}. PR křivky všech těchto topologií jsou zobrazeny na obrázku \ref{topologies}. \todo{Grafy v TikZ, aby byly stejné fonty, možná 2 vedle sebe. legenda na dobrém místě, české legendy}
 
 \result{topology_PR.pdf}{topologies}{Srovnání PR křivek různých topologií}
 
-\section{Srovnání různých velikosti příznaků}
+\section{Srovnání vlivu parametrů generátoru příznaků}
 
+\todo{algoritmus někde poblíž}
 \begin{algorithm}
 	\caption{Generátor vektorů příznaků}
 	\label{feature_generator}
@@ -30,16 +31,17 @@ Bylo vyzkoušeno 5 různých topologií neuronových sítí, odpovídajících m
 	\end{algorithmic}
 \end{algorithm}
 
-Jako funkce \( \psi \) projektující tokeny adresy URL do vektorů příznaků byla použita funkce popsaná algoritmem \ref{feature_generator}.\todo{Parametry algoritmu, studuji citlivost modelu na prametry. Sloučit s další sekcí. Nejprve odstavec o algoritmu a jeho parametrech, pak o vlivu n, o vlivu modula.} Tato funkce každý token rozloží na posloupnost \( n \)\BPname{-gramů} (podslov délky \( n \)) a tyto \( n \)-gramy převede na indexy odpovídající pozicím ve vektoru příznaků. Vektor příznaků je pak vektorem četnosti výskytů jednotlivých trigramů. Byly vyzkoušeny unigramy (\( n = 1 \)), bigramy \todo{Když se stihnou evaluovat} (\( n = 2 \)) a trigramy (\( n = 3 \)), všechny s ostatními parametry stejnými, jako v kapitole \ref{prior_art_comparison}. PR křivky pro tyto tři rozdílné velikosti příznaků jsou na obrázku \ref{ngrams}.\todo{Obrázek}
+Jako funkce \( \psi \) projektující tokeny adresy URL do vektorů příznaků byla použita funkce popsaná algoritmem \ref{feature_generator}. Tato funkce každý token rozloží na posloupnost \( n \)\BPname{-gramů} (podslov délky \( n \)) a tyto \( n \)-gramy převede na indexy odpovídající pozicím ve vektoru příznaků. Vektor příznaků je pak vektorem četnosti výskytů jednotlivých trigramů. Tento algoritmus je nastaven dvěma parametry a to sice délkou vektoru příznaků (využívanou jako modulo při převodu \( n \)-gramů na indexy) a délkou podslov \( n \). Všechny ostatní parametry byly ponechány na hodnotách z kapitoly \ref{prior_art_comparison}.
+
+Pro srovnání vlivu hodnoty \( n \) byly naučeny tři rozdílné modely využívající unigramy (\( n = 1 \)), bigramy (\( n = 2 \)) \todo{Bigramy?} a trigramy (\( n = 3 \)). Všechny tyto modely mají délku vektoru příznaků 2053. Na obrázku \ref{ngrams} jsou srovnány PR křivky pro tyto tři modely.
 
 \result{placeholder.pdf}{ngrams}{Srovnání PR křivek pro různé velikosti příznaků}
 
-\section{Srovnání různého počtu příznaků}
-V algoritmu \ref{feature_generator} lze měnit i velikost generovaného vektoru příznaků. Byly vyzkoušeny velikosti \( 509 \), \( 1021 \), \( 2053 \), \( 4099 \) a \( 8191 \) \todo{Když se stihnou evaluovat}, opět s ostatními parametry stejnými jako v kapitole \ref{prior_art_comparison}. Srovnání PR křivek je na obrázku \ref{feature_count}.\todo{Obrázek}
+Pro srovnání vlivu délky vektoru příznaků byly naučeny modely s délkou 509, 1021, 2053, 4099 a 8191 \todo{Opravdu?}. Všechny tyto modely využívají trigramy. Na obrázku \ref{feature_count} jsou srovnány PR křivky těchto modelů.
 
 \result{placeholder.pdf}{feature_count}{Srovnání PR křivek pro různé počty příznaků}
 
-\section{Srovnání různých vah na pozitivních taškách}
-\todo{Studuji váhu, protože 0.5 neodpovídá realitě datasetu. Ukázalo se, že na tom nezáleží}Při trénování umělé neuronové sítě lze pozitivním a negativním taškám přiřadit různé váhy, podle kterých se algoritmus bude jinak agresivně snažit odstranit falešně pozitivní a falešně negativní odhady \todo{Víc detailu?}. Byly vyzkoušeny váhy na pozitivních taškách \( 0.5 \), \( 0.1 \) a \( 0.01 \). Všechny ostatní parametry byly ponechány na hodnotách z kapitoly \ref{prior_art_comparison}. Jejich PR křivky jsou srovnané na obrázku \ref{weights}.
+\section{Srovnání vlivu váhy na pozitivních taškách}
+Při trénování umělé neuronové sítě lze pozitivním a negativním taškám přiřadit různé váhy, odpovídající mírám nežádoucnosti falešně negativních a falešně pozitivních odhadů. Výchozí váha na pozitivní třídě (tj. 0.5) neodpovídá souboru dat představenému v kapitole \ref{dataset}, kde pozitivních vzorků je výrazně méně, přestože cílem je právě jejich detekce. Proto byly vyzkoušeny modely s váhou (na pozitivní třídě) 0.5, 0.1 a 0.01 s všemi ostatními parametry ponechanými na hodnotách z kapitoly \ref{prior_art_comparison}. PR křivky těchto modelů jsou srovnány na obrázku \ref{weights}.
 
 \result{weights_PR.pdf}{weights}{Srovnání PR křivek pro různé váhy na pozitivních taškách}
