--- a/zotero.bib
+++ b/zotero.bib
@@ -603,3 +603,14 @@ An existing approach known as {MILES} is retroactively identified as an algorith
 	keywords = {Anticoagulant drug therapy, Artificial neural networks, Medical decision support, Regression},
 	file = {ScienceDirect Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/U6QNTDXH/S0933365701000926.html:text/html}
 }
+
+@online{roelants_how_2017,
+	title = {How to implement a neural network Intermezzo 2},
+	url = {https://peterroelants.github.io/posts/neural_network_implementation_intermezzo02/},
+	titleaddon = {Peter's notes},
+	author = {Roelants, Peter},
+	urldate = {2017-07-08},
+	date = {2017},
+	langid = {english},
+	file = {Peter's Notes:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/66VUWUIX/neural_network_implementation_intermezzo02.html:text/html}
+}
