--- a/abstract.tex
+++ b/abstract.tex
@@ -49,9 +49,8 @@ detekce malware, klasifikace síťového provozu, model adresy URL, multi-instan
 
 	\bigskip
 
-	\todo{zkontrolovat}
 	\noindent \textit{Abstract:}
-	\textenglish{The current approach to the detection of unwanted software by monitoring client traffic uses hand-crafted features as part of the model. This approach has several disadvantages. This thesis proposes a fully automatic classifier which recognises malware activity on the level of network connections. The multi-instance learning approach was used in order to achieve this. As a part of this thesis the multi-instance learning was theoretically defined using two different formalisms and current work in this field was summarised. Subsequently, there was described the hierarchical structure of an URL address which was used as an input for the classifier. A model reflecting this inherent hierarchical structure was proposed and an explanation of how multi-instance learning was utilised and modified was presented together with the description of the implementation of the model using neural networks. Methods of classifier quality assessment were outlined. The presented classifier was compared with prior art and the influence of model parameters on its quality was assessed.}
+	\textenglish{The current approach to the detection of unwanted software by monitoring client traffic uses handwritten features as part of the model. This approach has several disadvantages. This thesis proposes a fully automated classifier which recognises malware activity at network connection level. The multi-instance learning approach was used in order to achieve this. As a part of this thesis the multi-instance learning was theoretically defined using two different formalisms and current work in this field was summarised. Subsequently, there was described the hierarchical structure of an URL address which was used as an input for the classifier. A model reflecting this inherent hierarchical structure was proposed and an explanation of how multi-instance learning was utilised and modified was presented together with the description of the implementation of the model using neural networks. Methods of classifier quality assessment were outlined. The classifier presented here was compared with prior art and the influence of model parameters on its quality was assessed.}
 
 	\bigskip
 
